# JobMatch

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_jobmatch.ps1  setup_jobmatch.ps1
app/: __init__.py  cli.py
app/core/: engine.py  job_fetcher.py  matcher.py  normalizer.py  ollama_service.py  resume_parser.py  scoring.py  source_discovery.py  types.py
app/db/: __init__.py  models.py  storage.py
app/ui/: __init__.py  main.py
app/utils/: __init__.py  config.py  logging.py  skills.py  text.py
browser_extension/: README.md  content.js  manifest.json  popup.css  popup.html  popup.js
jobmatch_local.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_application_tracking.py  test_fetcher.py  test_manual_import.py  test_normalizer.py  test_resume_parser.py  test_salary_parsing.py  test_scoring.py  test_source_discovery.py
